Use yaml for configuration file, add uthash for futur command storage

--- a/buildmanager/Makefile
+++ b/buildmanager/Makefile
@@ -1,6 +1,11 @@
-SRCS=	lexconf.l parseconf.y buildmanager.c
-
 PROG=	buildmanager
+
+CFLAGS+=	-std=c99 \
+		-I${.CURDIR}/../external/libyaml/include \
+		-I${.CURDIR}/../external/uthash
+
+LDADD+=		-L${.OBJDIR}/../external/libyaml \
+		-lyaml
 
 NO_MAN=	yes
 
